--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@prisma/client": "5.5.2",
     "fastify": "^4.24.3",
-    "prisma": "^5.5.2"
+    "fastify-zod": "^1.4.0",
+    "pino": "^8.16.1",
+    "prisma": "^5.5.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
