--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "5.5.2",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "fastify-zod": "^1.4.0",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^8.16.1",
+    "pino-pretty": "^10.2.3",
     "prisma": "^5.5.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.9",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
