--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/bcrypt": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.9",
